infrastructure/k8s/auth-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ok-scoring-auth-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ok-scoring-auth-service
  template:
    metadata:
      labels:
        app: ok-scoring-auth-service
    spec:
      containers:
        - name: ok-scoring-auth-service
          image: okeefem/ok-scoring-auth-service:latest

---

apiVersion: v1
kind: Service
metadata:
  name: ok-scoring-auth-service
spec:
  type: NodePort
  selector:
    app: ok-scoring-auth-service
  ports:
    - name: ok-scoring-auth-service
      protocol: TCP
      port: 3000 # Service port
      targetPort: 3000 # Container port
---
apiVersion: v1
kind: Service
metadata:
  name: ok-scoring-auth-service-internal
spec:
  type: ClusterIP # This is the default btw
  selector:
    app: ok-scoring-auth-service
  ports:
    - name: ok-scoring-auth-service
      protocol: TCP
      port: 3000 # Service port
      targetPort: 3000 # Container port
